layout fixes for list content on mobile

--- a/css/index.less
+++ b/css/index.less
@@ -670,6 +670,10 @@ ul.tags {
 .sent-invitations {
   padding: 10px 0 0 !important;
 
+  .mobile({
+    overflow-y: scroll;
+  });
+
   table {
     width: 100%;
   }
