--- a/css/layout.less
+++ b/css/layout.less
@@ -495,3 +495,10 @@ nav {
 .footer-meta {
   margin-top: @p-bottom-margin;
 }
+
+#intercom-launcher {
+  .mobile({
+    transform: scale(0.8) translateX(20px) translateY(20px) !important;
+    opacity: 0.8;
+  });
+}
